--- a/.platform/nginx.conf
+++ b/.platform/nginx.conf
@@ -1,3 +1,1 @@
-echo "location / {
-    try_files \$uri \$uri/ /index.php?\$query_string;
-}" > .platform/nginx.conf
+location / { try_files $uri $uri/ /index.php?$query_string; }
